Replace next-themes with custom ThemeProvider implementation

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.18.2",
@@ -52,7 +53,6 @@
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.462.0",
     "motion": "^12.5.0",
-    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
